# RAG-Systems

./: .gitignore  README.md  pyproject.toml
docker/: .env.example  Makefile  README.md  docker-compose.yml
kg-rag/docker/: .env.example  Dockerfile.ollama  README.md  docker-compose.yml
kg-rag/notebooks/: Quick-Intro_MemGraph.ipynb
notebooks/: Demo_KG-RAG.ipynb  Quick-Intro_Neo4j.ipynb
