[project]
name = "rag-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gqlalchemy>=1.8.0",
    "jupyterlab>=4.5.1",
    "langchain-memgraph>=0.1.12",
    "langchain-neo4j>=0.6.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=2.2.3",
]
